--- a/package.json
+++ b/package.json
@@ -15,15 +15,13 @@
     "@angular/common": "2.2.1",
     "@angular/compiler": "2.2.1",
     "@angular/core": "2.2.1",
-    "@angular/forms": "2.2.1",
     "@angular/http": "2.2.1",
     "@angular/platform-browser": "2.2.1",
     "@angular/platform-browser-dynamic": "2.2.1",
-    "@angular/router": "3.2.1",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
-    "font-awesome": "^4.7.0",
-    "ng2-bootstrap": "^1.1.16",
+    "jquery": "^3.1.1",
+    "ng2-bs3-modal": "^0.10.4",
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.6.23"
